feat: add header and navigation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>My Portfolio</title>
 </head>
+<header>
+    <h1>Tiến Lê Portfolio</h1>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 <body>
 
 </body>
