feat: add about me section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     </nav>
 </header>
 <body>
-
+    <section id="about">
+    <h2>About Me</h2>
+    <p>I am a backend developer learning Git and Web Development.</p>
+</section>
 </body>
 </html>
 
