--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 </header>
 <body>
     <section id="about">
-    <h2>About Me</h2>
-    <p>I am a backend developer learning Git and Web Development.</p>
-</section>
+        <h2>About Me</h2>
+        <p>I am a backend developer learning Git and Web Development.</p>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: tienle@gmail.com</p>
+    </section>
 </body>
 </html>
 
