fix: correct typo in contact email

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: tienle@gmail.com</p>
+        <p>Email: tienle2004@gmail.com</p>
     </section>
 </body>
 </html>
