--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
         <h2>Contact</h2>
         <p>Email: tienle2004@gmail.com</p>
     </section>
+        <section id="contact-form">
+        <h2>Contact Form</h2>
+        <form>
+            <label>Name:</label><br>
+            <input type="text" name="name"><br><br>
+
+            <label>Email:</label><br>
+            <input type="email" name="email"><br><br>
+
+            <label>Message:</label><br>
+            <textarea name="message"></textarea><br><br>
+
+            <button type="submit">Send</button>
+        </form>
+    </section>
 </body>
 </html>
 
